--- a/index.html
+++ b/index.html
@@ -1,16 +1,78 @@
 <!DOCTYPE html>
-<html lang="pt-BR"
+<html lang="pt-br">
 <head>
-<title>Solange_Apresentação</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Seu Nome">
+    <title>Minha Página de Apresentação</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <div>
-        </head>Solange_Apresentação</head>
-    </div>
+    <!-- Cabeçalho -->
+    <header>
+        <h1>Bem-vindo à minha página de apresentação!</h1>
+    </header>
 
-    <section>
-        <h1>Seja-Bem-Vindos</h1>
-       </section>
-      </body>
-   </head>
-</html>  
+    <!-- Descrição -->
+    <section id="sobre">
+        <h2>Sobre Mim</h2>
+        <p>Olá, meu nome é [Seu Nome]. Sou apaixonado por tecnologia, aprendizado contínuo e desenvolvimento de software. Nesta página, você pode conhecer um pouco mais sobre mim, meus gostos e interesses.</p>
+        <img src="sua-foto.jpg" alt="Minha Foto" class="foto">
+    </section>
 
+    <!-- Música que você gosta -->
+    <section id="musicas">
+        <h2>Músicas que eu gosto</h2>
+        <p>Aqui estão algumas das minhas músicas favoritas:</p>
+        <div class="musicas-lista">
+            <a href="https://www.youtube.com/watch?v=xxxx" target="_blank">
+                <img src="musica1.jpg" alt="Música 1" class="musica-img">
+            </a>
+            <a href="https://www.youtube.com/watch?v=yyyy" target="_blank">
+                <img src="musica2.jpg" alt="Música 2" class="musica-img">
+            </a>
+            <a href="https://www.youtube.com/watch?v=zzzz" target="_blank">
+                <img src="musica3.jpg" alt="Música 3" class="musica-img">
+            </a>
+        </div>
+    </section>
+
+    <!-- Vídeos que você gosta -->
+    <section id="videos">
+        <h2>Vídeos que eu gosto</h2>
+        <p>Aqui estão alguns vídeos que me inspiram:</p>
+        <div class="video-lista">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xxxx" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yyyy" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zzzz" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vvva" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <!-- Recomendações de sites para estudo -->
+    <section id="sites-estudo">
+        <h2>Sites para Estudo</h2>
+        <ul>
+            <li><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a> - Uma excelente plataforma para aprender matemática, ciência, história e muito mais.</li>
+            <li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a> - Ideal para aprender programação e desenvolvimento de software.</li>
+            <li><a href="https://www.edx.org/" target="_blank">edX</a> - Oferece cursos de universidades renomadas sobre diversos temas.</li>
+        </ul>
+    </section>
+
+    <!-- Sites que você utiliza -->
+    <section id="sites-utilizados">
+        <h2>Sites que eu utilizo</h2>
+        <ul>
+            <li><a href="https://www.github.com" target="_blank">GitHub</a> - Utilizo o GitHub para versionamento de código e projetos colaborativos.</li>
+            <li><a href="https://www.stackoverflow.com" target="_blank">Stack Overflow</a> - O Stack Overflow é meu recurso principal para resolver problemas de programação.</li>
+            <li><a href="https://www.google.com" target="_blank">Google</a> - O Google é a minha ferramenta de pesquisa para encontrar informações rápidas.</li>
+        </ul>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>Obrigado, Professor Hugo, pelo apoio e orientação. 💻</p>
+    </footer>
+</body>
+</html>
