--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Descrição -->
     <section id="sobre">
         <h2>Sobre Mim</h2>
-        <p>Olá, meu nome é [Seu Nome]. Sou apaixonado por tecnologia, aprendizado contínuo e desenvolvimento de software. Nesta página, você pode conhecer um pouco mais sobre mim, meus gostos e interesses.</p>
+        <p>Olá, meu nome é solange.Sou apaixonada em livros</p>
         <img src="sua-foto.jpg" alt="Minha Foto" class="foto">
     </section>
 
