--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <section id="sites-estudo">
         <h2>Sites para Estudo</h2>
         <ul>
-            <li><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a> - Uma excelente plataforma para aprender matemática, ciência, história e muito mais.</li>
-            <li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a> - Ideal para aprender programação e desenvolvimento de software.</li>
-            <li><a href="https://www.edx.org/" target="_blank">edX</a> - Oferece cursos de universidades renomadas sobre diversos temas.</li>
+            <li><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a>.</li>
+            <li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a>.</li>
+            <li><a href="https://www.edx.org/" target="_blank">edX</a>.</li>
         </ul>
     </section>
 
@@ -64,9 +64,9 @@
     <section id="sites-utilizados">
         <h2>Sites que eu utilizo</h2>
         <ul>
-            <li><a href="https://www.github.com" target="_blank">GitHub</a> - Utilizo o GitHub para versionamento de código e projetos colaborativos.</li>
-            <li><a href="https://www.stackoverflow.com" target="_blank">Stack Overflow</a> - O Stack Overflow é meu recurso principal para resolver problemas de programação.</li>
-            <li><a href="https://www.google.com" target="_blank">Google</a> - O Google é a minha ferramenta de pesquisa para encontrar informações rápidas.</li>
+            <li><a href="https://www.github.com" target="_blank">GitHub</a> .</li>
+            <li><a href="https://www.stackoverflow.com" target="_blank">Stack Overflow</a>.</li>
+            <li><a href="https://www.google.com" target="_blank">Google</a>.</li>
         </ul>
     </section>
 
