--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         <h2>Músicas que eu gosto</h2>
         <p>Aqui estão algumas das minhas músicas favoritas:</p>
         <div class="musicas-lista">
-            <a href="https://www.youtube.com/watch?v=xxxx" target="_blank">
-                <img src="musica1.jpg" alt="Música 1" class="musica-img">
-            </a>
+            <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/track/6gBFPUFcJLzWGx4lenP6h2?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    width="70%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+
             <a href="https://www.youtube.com/watch?v=yyyy" target="_blank">
                 <img src="musica2.jpg" alt="Música 2" class="musica-img">
             </a>
