--- a/index.html
+++ b/index.html
@@ -25,18 +25,24 @@
         <h2>Músicas que eu gosto</h2>
         <p>Aqui estão algumas das minhas músicas favoritas:</p>
         <div class="musicas-lista">
-            <iframe style="border-radius:12px"
-                    src="https://open.spotify.com/embed/track/6gBFPUFcJLzWGx4lenP6h2?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+            <iframe style="border-radius:10px"
+                    src="https://open.spotify.com/embed/track/6gBFPUFcJLzWGx4lenP6h2?utm_source=generator"></iframe>
                     width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
 
-            <a href="https://www.youtube.com/watch?v=yyyy" target="_blank">
-                <img src="musica2.jpg" alt="Música 2" class="musica-img">
-            </a>
-            <a href="https://www.youtube.com/watch?v=zzzz" target="_blank">
-                <img src="musica3.jpg" alt="Música 3" class="musica-img">
-            </a>
+                    <iframe style="border-radius:10px"
+                    src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1EBBKLLK2nX0bpgLocWcSV?utm_source=generator"></iframe>
+                    width="70%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+
+                    <iframe style="border-radius:10px"
+                    src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1i2kguziI3ZbUZnZMKNhQ2?utm_source=generator"></iframe>"></iframe>
+                    width="70%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
         </div>
     </section>
 
