--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <div class="musicas-lista">
 
             <iframe style="border-radius:10px"
-                    src="https://open.spotify.com/embed/track/6gBFPUFcJLzWGx4lenP6h2?utm_source=generator"></iframe>
+                    src="https://open.spotify.com/embed/track/6gBFPUFcJLzWGx4lenP6h2?utm_source=generator"
                     width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
 
                     <iframe style="border-radius:10px"
-                    src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1EBBKLLK2nX0bpgLocWcSV?utm_source=generator"></iframe>
+                    src="https://open.spotify.com/embed/track/1EBBKLLK2nX0bpgLocWcSV?utm_source=generator"
                     width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
 
                     <iframe style="border-radius:10px"
-                    src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1i2kguziI3ZbUZnZMKNhQ2?utm_source=generator"></iframe>"></iframe>
+                    src="https://open.spotify.com/embed/track/1i2kguziI3ZbUZnZMKNhQ2?utm_source=generator"
                     width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
