--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <h2>Vídeos que eu gosto</h2>
         <p>Aqui estão alguns vídeos que me inspiram:</p>
         <div class="video-lista">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/eHxVXHvKwTY?si=bV8ZULWJnT1Hz01P"></iframe>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/zzzz" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/wwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vvva" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/eHxVXHvKwTY?si=bV8ZULWJnT1Hz01P"</iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YWs-68nTGrs?si=XK05u8P9nCKpR_A6" title="YouTube video player"</iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EQvOkjxsO0k?si=Y0TyO59e7WBioZOO"</iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cf0rRYvDuys?si=A9FNmPN0QpN0RUDT"</iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/DFnAWpQicqo?si=8CQlapBmC19L7w2V"</iframe>
         </div>
     </section>
 
