--- a/index.html
+++ b/index.html
@@ -1,87 +1,84 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Seu Nome">
-    <title>Minha Página de Apresentação</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Minha Apresentação</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Cabeçalho -->
+
     <header>
-        <h1>Bem-vindo à minha página de apresentação!</h1>
+        <h1>Olá, meu nome é Karlos </h1>
     </header>
 
-    <!-- Descrição -->
-    <section id="sobre">
+    <section class="about">
         <h2>Sobre Mim</h2>
-        <p>Olá, meu nome é solange.Sou apaixonada em livros</p>
-        <img src="sua-foto.jpg" alt="Minha Foto" class="foto">
+        <p>Meu nome é Karlos Eduardo tenho 16 anos estudo na escola João Pires de Camargo e sou aluno do professor Hugo Duro que é o meu professor de robótica. </p>
+        <img src="carrosselcorinthians.webp" class="profile-photo">
     </section>
 
-    <!-- Música que você gosta -->
-    <section id="musicas">
+    <section class="music">
         <h2>Músicas que eu gosto</h2>
-        <p>Aqui estão algumas das minhas músicas favoritas:</p>
-        <div class="musicas-lista">
-
-            <iframe style="border-radius:10px"
-                    src="https://open.spotify.com/embed/track/6gBFPUFcJLzWGx4lenP6h2?utm_source=generator"
-                    width="70%" height="152" frameBorder="0" allowfullscreen=""
+        <ul>
+            <iframe src="https://open.spotify.com/embed/track/77TElJdpImw8cSv6t4mCIr?utm_source=generator"                    width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
 
-                    <iframe style="border-radius:10px"
-                    src="https://open.spotify.com/embed/track/1EBBKLLK2nX0bpgLocWcSV?utm_source=generator"
+                    <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/track/2xs2TwrlfamtW0DQqId0M5?utm_source=generator"
                     width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
+                
+         <iframe style="border-radius:12px"
+         src="https://open.spotify.com/embed/track/0bGdfmQBwZpXzDfTzeNh08?utm_source=generator"
+          width="70%" height="152" frameBorder="0" allowfullscreen=""
+         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"></iframe>
 
-                    <iframe style="border-radius:10px"
-                    src="https://open.spotify.com/embed/track/1i2kguziI3ZbUZnZMKNhQ2?utm_source=generator"
-                    width="70%" height="152" frameBorder="0" allowfullscreen=""
-                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                    loading="lazy"></iframe>
-        </div>
+
+
+                
+                <a href="https://www.youtube.com/embed/8jX1IWc8yIg?si=QpXExB3PpTjPraCJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <img src="imagem-musica-3.jpg" alt="Música 3" class="music-img"> Música 3
+                </a>
+            </li>
+        </ul>
     </section>
 
-    <!-- Vídeos que você gosta -->
-    <section id="videos">
+    <section class="videos">
         <h2>Vídeos que eu gosto</h2>
-        <p>Aqui estão alguns vídeos que me inspiram:</p>
-        <div class="video-lista">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/eHxVXHvKwTY?si=bV8ZULWJnT1Hz01P"</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/YWs-68nTGrs?si=XK05u8P9nCKpR_A6" title="YouTube video player"</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/EQvOkjxsO0k?si=Y0TyO59e7WBioZOO"</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/cf0rRYvDuys?si=A9FNmPN0QpN0RUDT"</iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/DFnAWpQicqo?si=8CQlapBmC19L7w2V"</iframe>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/8M8P2MKM2Cw?si=WTwb7L90mCxo5hLa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/awh1I_90AAk?si=UX7hyWiUJ8yvohQi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/9Yq_-cRVrc4?si=cITb8z-h2OPP-Aup" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/AmHGiPx-s5o?si=3IS7YH2f6DTUOz9N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/1gi1xOhw6XA?si=e9coN4kdTP2LSPky" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
-    <!-- Recomendações de sites para estudo -->
-    <section id="sites-estudo">
-        <h2>Sites para Estudo</h2>
+    <section class="recommendations">
+        <h2>Recomendações de Sites para Estudo</h2>
         <ul>
-            <li><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a>.</li>
-            <li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a>.</li>
-            <li><a href="https://www.edx.org/" target="_blank">edX</a>.</li>
+            <li><a href="https://repositorio.educacao.sp.gov.br/">centro de mídia</a>.</li>
+            <li><a href="https://leiasp.odilo.us/">leiasp</a>.</li>
+            <li><a href="https://cursos.alura.com.br/dashboard">Alura</a>.</li>
         </ul>
     </section>
 
-    <!-- Sites que você utiliza -->
-    <section id="sites-utilizados">
-        <h2>Sites que eu utilizo</h2>
-        <ul>
-            <li><a href="https://www.github.com" target="_blank">GitHub</a> .</li>
-            <li><a href="https://www.stackoverflow.com" target="_blank">Stack Overflow</a>.</li>
-            <li><a href="https://www.google.com" target="_blank">Google</a>.</li>
-        </ul>
-    </section>
-
-    <!-- Rodapé -->
     <footer>
-        <p>Obrigado, Professor Hugo, pelo apoio e orientação. 💻</p>
+        <p>Agradecimento ao professor Hugo Duro.</p>
     </footer>
+
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+
+
+Área de anexos
