--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Minha Apresentação</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>Olá, meu nome é Karlos </h1>
+        <h1>Olá, meu nome é Solange Oliveira  </h1>
     </header>
 
     <section class="about">
         <h2>Sobre Mim</h2>
-        <p>Meu nome é Karlos Eduardo tenho 16 anos estudo na escola João Pires de Camargo e sou aluno do professor Hugo Duro que é o meu professor de robótica. </p>
+        <p>Meu nome é Solange Oliveira tenho 17 anos estudo na escola João Pires de Camargo e sou aluno do professor Hugo Duro que é o meu professor de robótica. </p>
         <img src="carrosselcorinthians.webp" class="profile-photo">
     </section>
 
