--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 
     <section class="about">
         <h2>Sobre Mim</h2>
-        <p>Meu nome é Solange Oliveira tenho 17 anos estudo na escola João Pires de Camargo e sou aluno do professor Hugo Duro que é o meu professor de robótica. </p>
+        <p>Meu nome é Solange Oliveira tenho 17 anos, sou aluna do professor Hugo que é o meu professor de robótica. </p>
         <img src="carrosselcorinthians.webp" class="profile-photo">
     </section>
 
     <section class="music">
         <h2>Músicas que eu gosto</h2>
         <ul>
-            <iframe src="https://open.spotify.com/embed/track/77TElJdpImw8cSv6t4mCIr?utm_source=generator"                    width="70%" height="152" frameBorder="0" allowfullscreen=""
+            <iframe src="https://open.spotify.com/embed/track/1i2kguziI3ZbUZnZMKNhQ2?utm_source=generator" 
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
 
                     <iframe style="border-radius:12px"
-                    src="https://open.spotify.com/embed/track/2xs2TwrlfamtW0DQqId0M5?utm_source=generator"
+                    src="https://open.spotify.com/embed/track/36wWhtZyNc7YSGORYvLZ5X?utm_source=generator"
                     width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
                 
          <iframe style="border-radius:12px"
-         src="https://open.spotify.com/embed/track/0bGdfmQBwZpXzDfTzeNh08?utm_source=generator"
+         src="https://open.spotify.com/embed/track/50mawjudhEofTcUIpRmGXr?utm_source=generator" 
           width="70%" height="152" frameBorder="0" allowfullscreen=""
          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"></iframe>
@@ -56,7 +56,7 @@
             <iframe src="https://www.youtube.com/embed/cf0rRYvDuys?si=jYfH_1u_yDTFL7Nj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/lqMJQa3JhZU?si=R1zOVlANANENp3he" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/YWs-68nTGrs?si=K6hPGR_FLBQE9NXz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/AmHGiPx-s5o?si=3IS7YH2f6DTUOz9N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/cVKkL4O60IM?si=ygcCoweeu73pvnsX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/EQvOkjxsO0k?si=p73uX9QQkSOyYPyW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
