--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <section class="music">
         <h2>Músicas que eu gosto</h2>
         <ul>
-            <iframe src="https://open.spotify.com/embed/track/1i2kguziI3ZbUZnZMKNhQ2?utm_source=generator" 
+            <iframe src="https://open.spotify.com/embed/track/1i2kguziI3ZbUZnZMKNhQ2?utm_source=generator"
+             width="70%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
 
