--- a/index.html
+++ b/index.html
@@ -72,14 +72,10 @@
     </section>
 
     <footer>
-        <p>Agradecimento ao professor Hugo Duro.</p>
+        <p>Agradeço ao professor Hugo Duro.</p>
     </footer>
 
 </body>
 </html>
 
-<!DOCTYPE html>
-<html lang="pt-br">
 
-
-Área de anexos
