--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 
                 <a href="https://www.youtube.com/embed/8jX1IWc8yIg?si=QpXExB3PpTjPraCJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <img src="imagem-musica-3.jpg" alt="Música 3" class="music-img"> Música 3
+                    
                 </a>
             </li>
         </ul>
@@ -72,7 +72,7 @@
     </section>
 
     <footer>
-        <p>Agradeço ao professor Hugo Duro.</p>
+        <p>Agradeço ao professor Hugo .</p>
     </footer>
 
 </body>
