--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="about">
         <h2>Sobre Mim</h2>
         <p>Meu nome é Solange Oliveira tenho 17 anos, sou aluna do professor Hugo que é o meu professor de robótica. </p>
-        <img src="download.jpeg" class="profile-photo">
+        <img src="images.jpeg" class="profile-photo">
     </section>
 
     <section class="music">
