--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Apresentação</title>
+    <title>Minha Apresentação.</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -12,12 +12,12 @@
 <body>
 
     <header>
-        <h1>Olá, meu nome é Solange Oliveira  </h1>
+        <h1>Olá, meu nome é Solange Oliveira.  </h1>
     </header>
 
     <section class="about">
         <h2>Sobre Mim</h2>
-        <p>Meu nome é Solange Oliveira tenho 17 anos, sou aluna do professor Hugo que é o meu professor de robótica. </p>
+        <p>Meu nome é Solange Oliveira, tenho 17 anos, sou aluna do professor Hugo, que é o meu professor de robótica. </p>
         <img src="images.jpeg" class="profile-photo">
     </section>
 
@@ -52,7 +52,7 @@
     </section>
 
     <section class="videos">
-        <h2>Vídeos que eu gosto</h2>
+        <h2>Vídeos que eu gosto.</h2>
         <div class="video-container">
             <iframe src="https://www.youtube.com/embed/cf0rRYvDuys?si=jYfH_1u_yDTFL7Nj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/lqMJQa3JhZU?si=R1zOVlANANENp3he" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -63,7 +63,7 @@
     </section>
 
     <section class="recommendations">
-        <h2>Recomendações de Sites para Estudo</h2>
+        <h2>Recomendações de Sites para Estudo.</h2>
         <ul>
             <li><a href="https://repositorio.educacao.sp.gov.br/">centro de mídias. O aplicativo permite a qualquer cidadão assistir as transmissões ao vivo do CNME (pela manhã, à tarde e à noite), da TV Escola e de outros canais educacionais</a>.</li>
             <li><a href="https://leiasp.odilo.us/">Leia sp. visa promover a prática da leitura e incentivar atividades pedagógicas</a>.</li>
@@ -72,7 +72,7 @@
     </section>
 
     <footer>
-        <p>Agradeço ao professor Hugo .</p>
+        <p>Agradeço ao professor Hugo.</p>
     </footer>
 
 </body>
