--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <section class="recommendations">
         <h2>Recomendações de Sites para Estudo.</h2>
         <ul>
-            <li><a href="https://repositorio.educacao.sp.gov.br/">centro de mídias. O aplicativo permite a qualquer cidadão assistir as transmissões ao vivo do CNME (pela manhã, à tarde e à noite), da TV Escola e de outros canais educacionais</a>.</li>
-            <li><a href="https://leiasp.odilo.us/">Leia sp. visa promover a prática da leitura e incentivar atividades pedagógicas</a>.</li>
-            <li><a href="https://cursos.alura.com.br/dashboard">Alura.  é a maior escola de tecnologia do Brasil. Em uma única matrícula, você pode acessar todos os cursos nas áreas de Programação, Front-end, DevOps, Mobile, Data Science, UX & Design, Inteligência Artificial e Gestão & Inovação.</a>.</li>
+            <li><a href="https://repositorio.educacao.sp.gov.br/">centro de mídias.</a>.</li> O aplicativo permite a qualquer cidadão assistir as transmissões ao vivo do CNME (pela manhã, à tarde e à noite), da TV Escola e de outros canais educacionais
+            <li><a href="https://leiasp.odilo.us/">Leia sp. </a>.</li> visa promover a prática da leitura e incentivar atividades pedagógicas
+            <li><a href="https://cursos.alura.com.br/dashboard">Alura. </a>.</li> é a maior escola de tecnologia do Brasil. Em uma única matrícula, você pode acessar todos os cursos nas áreas de Programação, Front-end, DevOps, Mobile, Data Science, UX & Design, Inteligência Artificial e Gestão & Inovação.
         </ul>
     </section>
 
